--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
           href="https://twitter.com/jonasschmedtman"
           >Jonas Schmedtmann</a
         >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own. <br /><em></em>
-          I have learned how to build JS apps through Jonas's JS course.</em
-        >
+        as your own. <br />
+        <em>
+          I have learned how to build JS apps through Jonas's JS course.
+        </em>
       </p>
     </div>
 
